--- a/paper/ldpcGpuTegra_bibliography.bib
+++ b/paper/ldpcGpuTegra_bibliography.bib
@@ -428,3 +428,18 @@ month={April},}
  title     = "CUDA Homepage",
  url       = "http://www.nvidia.com/object/cuda_home_new.html"
 }
+
+
+@ARTICLE{art_quasi, 
+author={K. Zhang and X. Huang and Z. Wang}, 
+journal={IEEE Journal on Selected Areas in Communications}, 
+title={High-throughput layered decoder implementation for quasi-cyclic LDPC codes}, 
+year={2009}, 
+volume={27}, 
+number={6}, 
+pages={985-994}, 
+keywords={CMOS integrated circuits;application specific integrated circuits;cyclic codes;parity check codes;ASIC;CMOS;bit rate 2.2 Gbit/s;critical path splitting;crossbar-based large interconnect network;frequency 950 MHz;high-throughput decoder design;parallel layered decoding architecture;quasi-cyclic LDPC codes;quasi-cyclic low-density parity-check codes;size 90 nm;Application specific integrated circuits;CMOS process;Delay effects;Frequency synthesizers;Iterative decoding;Message passing;Parallel processing;Parity check codes;Pipelines;Throughput;Low-density parity-check codes, quasi-cyclic codes, parallel architecture, layered decoding, critical path splitting, min-sum algorithm, loosely coupled algorithm, VLSI.}, 
+doi={10.1109/JSAC.2009.090816}, 
+ISSN={0733-8716}, 
+month={August},}
+
